--- a/Index.html
+++ b/Index.html
@@ -18,12 +18,12 @@
 
 <p class="error"> Но оформи его как следует</p>
 
-<p class="one">.</p>
-  
-<p class="two">.</p>
-  
-<p class="three">.</p>
-
+<div class="one"></div>
+<br>
+<div class="two"></div>
+<br>
+<div class="three"></div>
+<br>
 <p class="four">Joy of T<sub>E</sub>X</p>
 <div class="five">
 <h1 style="color:brown"> Заголовок первого уровня </h1>
