--- a/page2.html
+++ b/page2.html
@@ -10,10 +10,10 @@
 <body>
 <!-- coment -->
 
-<p class="one"> Характеристическое уравнение поверхности второй степени
+<div class="one"> Характеристическое уравнение поверхности второй степени
 <br>
 <br>
-<span style="font-size:18px">&#955;<sup>3</sup>-I<sub>1</sub>&#955 <sup>2</sup>+I<sub>2</sub>&#955;-I<sub>3</sub>=0 </span>
-</p>
+&#955;<sup>3</sup>-I<sub>1</sub>&#955 <sup>2</sup>+I<sub>2</sub>&#955;-I<sub>3</sub>=0
+</div>
 </body>
 </html>
