--- a/page3.html
+++ b/page3.html
@@ -10,10 +10,10 @@
 <body>
 <!-- coment -->
 
-<p class="one"> Многочлен степени <span style="font-style:oblique">n</span>
+<div class="one"> Многочлен степени <span style="font-style:oblique">n</span>
 <br>
 <br>
 <span style="font-size:20px"> <span style="font-style:oblique"> f(x) = a<sub style="color:blue">0</sub> + a<sub style="color:blue">1</sub>x + ... + a<sub style="color:blue">n-1</sub>x<sup style="color:red">n-1</sup> + a<sub style="color:blue">n</sub>x<sup style="color:red">n</sup> </span>
-</p>
+</div>
 </body>
 </html>
